Started notes about changes for v2.5

--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.22 2004-02-14 19:36:19 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.23 2004-02-28 12:56:25 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -16,7 +16,7 @@
    <a href="http://www.opensource.org/docs/definition.php" target="_top"><img src="images/osicert.gif" border="0" width="72" height="60"></a>
   </td>
   <td align=center>
-   <font face="bookman old style,arial" size=+4><b>GLFW v2.4.2</b></font><br>
+   <font face="bookman old style,arial" size=+4><b>GLFW v2.5</b></font><br>
    <font face="bookman old style,arial" size=+3>source distribution</font>
   </td>
   <td width=90 valign=top align=right>
@@ -53,7 +53,7 @@
 <a name="sec1">
 <p><h2>1. Introduction</h2>
 
-<p>Welcome to version 2.4.2 of the GLFW OpenGL framework. GLFW is a free,
+<p>Welcome to version 2.5 of the GLFW OpenGL framework. GLFW is a free,
 open source, portable framework for OpenGL application development. In
 short, it is a library that constitutes a powerful API for handling
 operating system specific tasks, such as opening an OpenGL window, reading
@@ -476,6 +476,12 @@ version of GLFW.
 
 <a name="sec5">
 <p><h2>5. Version history</h2>
+
+<p><h3>v2.5</h3>
+<ul>
+ <li>Added support for loading alpha textures (GLFW_ALPHA_MAP_BIT)</li>
+ <li>[X11] Bugfix: Some mouse button events were reported incorrectly</li>
+</ul>
 
 <p><h3>v2.4.2</h3>
 <ul>
