--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.23 2004-02-28 12:56:25 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.24 2004-03-04 21:37:04 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -480,6 +480,8 @@ version of GLFW.
 <p><h3>v2.5</h3>
 <ul>
  <li>Added support for loading alpha textures (GLFW_ALPHA_MAP_BIT)</li>
+ <li>Added support for the D programming language</li>
+ <li>[Win32] Bugfix: The DLL now exports glfwSetTime</li>
  <li>[X11] Bugfix: Some mouse button events were reported incorrectly</li>
 </ul>
 
@@ -781,6 +783,7 @@ version of GLFW.
 <tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;win32</b></td><td>&nbsp;</td><td>Windows specific implementation</td></tr>
 <tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;x11</b></td><td>&nbsp;</td><td>Unix/X11 specific implementation</td></tr>
 <tr valign="top"><td><b>support</b></td><td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;d</b></td><td>&nbsp;</td><td>D support</td></tr>
 <tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;delphi</b></td><td>&nbsp;</td><td>Delphi support</td></tr>
 <tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;masm</b></td><td>&nbsp;</td><td>MASM32 support</td></tr>
 <tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;win32dll</b></td><td>&nbsp;</td><td>Compiled version of the GLFW Win32 DLL</td></tr>
