--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.24 2004-03-04 21:37:04 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.25 2004-03-07 21:22:42 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -482,6 +482,8 @@ version of GLFW.
  <li>Added support for loading alpha textures (GLFW_ALPHA_MAP_BIT)</li>
  <li>Added support for the D programming language</li>
  <li>[Win32] Bugfix: The DLL now exports glfwSetTime</li>
+ <li>[X11] Bugfix: Runtime check of XF86VidMode support for the active
+     display.</li>
  <li>[X11] Bugfix: Some mouse button events were reported incorrectly</li>
 </ul>
 
