--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.25 2004-03-07 21:22:42 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.26 2004-04-05 20:29:14 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -88,6 +88,7 @@ Windows compilers, a Win32 DLL will also be compiled.
   <li>Microsoft Visual C++ 6.x for Windows</li>
   <li>MinGW32 (GCC) for Windows</li>
   <li>OpenWatcom for Windows</li>
+  <li>Pelles C for Windows</li>
   <li>Unix or Unix-like systems running the X Window System (auto detect
       compiler, or force GCC)</li>
   <li>Geek Gadgets (GCC) for AmigaOS</li>
@@ -162,7 +163,6 @@ the required environment variables. If nmake does not work, you probably
 have to run "WATCOM\setvars.bat" from the command prompt before executing
 nmake, where WATCOM is the directory in which you installed OpenWatcom
 (e.g. C:\Watcom).
-
 
 
 <p><br><h3>2.5 Note for Unix/X11 users</h3>
@@ -481,6 +481,7 @@ version of GLFW.
 <ul>
  <li>Added support for loading alpha textures (GLFW_ALPHA_MAP_BIT)</li>
  <li>Added support for the D programming language</li>
+ <li>Added support for the Pelles C compiler for Windows</li>
  <li>[Win32] Bugfix: The DLL now exports glfwSetTime</li>
  <li>[X11] Bugfix: Runtime check of XF86VidMode support for the active
      display.</li>
@@ -843,6 +844,9 @@ useful for OpenGL development.
 
   <li>Gerald Franz, who made GLFW compile under IRIX, and supplied patches
   for the X11 keyboard translation routine.</li><br><br>
+
+  <li>Glenn Lewis, for helping out with support for the D programming
+  language.</li><br><br>
 
   <li>Frank Wille, for helping me with the AmigaOS port and making GLFW
   compile under IRIX 5.3.</li><br><br>
