--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.26 2004-04-05 20:29:14 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.27 2004-04-07 20:56:38 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -98,14 +98,14 @@ Windows compilers, a Win32 DLL will also be compiled.
 </ol>
 
 <p>If your compiler/system is not in the list, you will have to create new
-makefiles in the <b>lib\win32</b>, <b>lib/x11</b>, <b>lib/amigaos</b> or <b>lib/macosx</b>
-directory, and in the <b>examples</b> directory. If you have any problems,
-do not hesitate to contact me (I may not know how your compiler works, but
-I know the GLFW source code). I would also like to add support for more
-compilers and verify that GLFW compiles under as many systems as possible,
-so if you had to make any modifications or additions to the source and/or
-makefiles in order to make GLFW compile successfully, I would like to know
-what you had to do.
+makefiles in the <b>lib\win32</b>, <b>lib/x11</b>, <b>lib/amigaos</b>,
+<b>lib/macosx</b> or <b>lib\dos</b> directory, and in the <b>examples</b>
+directory. If you have any problems, do not hesitate to contact me (I may
+not know how your compiler works, but I know the GLFW source code). I would
+also like to add support for more compilers and verify that GLFW compiles
+under as many systems as possible, so if you had to make any modifications
+or additions to the source and/or makefiles in order to make GLFW compile
+successfully, I would like to know what you had to do.
 
 
 <p><br><h3>2.1 Note for Microsoft Visual C++ users</h3>
@@ -165,7 +165,13 @@ nmake, where WATCOM is the directory in which you installed OpenWatcom
 (e.g. C:\Watcom).
 
 
-<p><br><h3>2.5 Note for Unix/X11 users</h3>
+<p><br><h3>2.5 Note for Pelles C users</h3>
+
+<p>To build GLFW with Pelles C, you need at lest version 2.80 of Pelles C
+(POCC and POLINK).
+
+
+<p><br><h3>2.6 Note for Unix/X11 users</h3>
 
 <p>Compiler and link library capabilities are auto-detected with a script
 called <b>compile.sh</b>. It has been tested under Linux Mandrake 9.1,
@@ -175,7 +181,7 @@ generate functional Makefiles. You do not have to run the script manually,
 since it is called from the top level Makefile.
 
 
-<p><br><h3>2.6 Note for AmigaOS users</h3>
+<p><br><h3>2.7 Note for AmigaOS users</h3>
 
 <p>The current AmigaOS implementation of GLFW requires VBCC (an excellent
 free C compiler) or Geek Gadgets GCC, the StormMesa developer package, and
@@ -192,7 +198,7 @@ been implemented, but there are still some things missing (e.g. hiding the
 mouse cursor in windowed mode, iconification handling etc).
 
 
-<p><br><h3>2.7 Note for Mac OS X users</h3>
+<p><br><h3>2.8 Note for Mac OS X users</h3>
 
 <p>To compile GLFW for Mac OS X, you will need to have installed the BSD
 subsystem and the Developer Tools, which can be found on your Mac OS X
@@ -201,12 +207,15 @@ CD:s. When they are installed, simply open Terminal and go to the
 make with the appropriate makefile, i.e. <b>make -f Makefile.macosx.gcc</b>.
 
 
-<p><br><h3>2.8 Note for DOS users</h3>
+<p><br><h3>2.9 Note for DOS users</h3>
 
 <p>The current port for DOS is very preliminiary. It is based on alpha
 versions of DJGPP and Mesa 5.1, and in my experience the mouse interface
 seems error prone (random crashes). At the moment the DOS port should be
 considered experiemental at best, so use it at your own risk.
+
+<p>Also, if you decide to build GLFW under pure DOS you will need some
+software to support long file names (I have used DOSLFN without problems).
 
 
 
