Added news about glfwWaitEvents

--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.27 2004-04-07 20:56:38 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.28 2004-04-09 11:05:23 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -489,6 +489,7 @@ version of GLFW.
 <p><h3>v2.5</h3>
 <ul>
  <li>Added support for loading alpha textures (GLFW_ALPHA_MAP_BIT)</li>
+ <li>Added the function glfwWaitEvents</li>
  <li>Added support for the D programming language</li>
  <li>Added support for the Pelles C compiler for Windows</li>
  <li>[Win32] Bugfix: The DLL now exports glfwSetTime</li>
