Added note about X11 fullscreen mode.

--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.31 2004-04-13 20:12:15 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.32 2004-07-07 20:25:20 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -515,6 +515,7 @@ version of GLFW.
  <li>[Win32] Bugfix: The DLL now exports glfwSetTime</li>
  <li>[Win32] Fix: The GLFW window is now placed in the upper left corner
      of the desktop working area</li>
+ <li>[X11] Bugfix: More robust fullscreen mode (?)</li>
  <li>[X11] Bugfix: Runtime check of XF86VidMode support for the active
      display</li>
  <li>[X11] Bugfix: Some mouse button events were reported incorrectly</li>
