--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.32 2004-07-07 20:25:20 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.33 2004-07-09 20:28:29 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -512,6 +512,9 @@ version of GLFW.
  <li>Added support for loading alpha textures (GLFW_ALPHA_MAP_BIT)</li>
  <li>Added support for the D programming language</li>
  <li>Added support for the Pelles C compiler for Windows</li>
+ <li>Added API level support for up to eight mouse buttons</li>
+ <li>[Win32] Added support for up to five mouse buttons</li>
+ <li>[Win32] Mouse down events capture mouse input</li>
  <li>[Win32] Bugfix: The DLL now exports glfwSetTime</li>
  <li>[Win32] Fix: The GLFW window is now placed in the upper left corner
      of the desktop working area</li>
