--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.33 2004-07-09 20:28:29 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.34 2004-07-13 22:03:03 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -510,6 +510,7 @@ version of GLFW.
  <li>Added window paint callback, which is called when the window needs
      to be repainted</li>
  <li>Added support for loading alpha textures (GLFW_ALPHA_MAP_BIT)</li>
+ <li>Added support for the Lua programming language</li>
  <li>Added support for the D programming language</li>
  <li>Added support for the Pelles C compiler for Windows</li>
  <li>Added API level support for up to eight mouse buttons</li>
@@ -883,6 +884,8 @@ useful for OpenGL development.
 
   <li>Glenn Lewis, for helping out with support for the D programming
   language.</li><br><br>
+
+  <li>David Medlock, for doing the initial Lua port.</li><br><br>
 
   <li>Frank Wille, for helping me with the AmigaOS port and making GLFW
   compile under IRIX 5.3.</li><br><br>
