--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.34 2004-07-13 22:03:03 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.35 2004-08-01 16:01:35 elmindreda Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -210,8 +210,8 @@ mouse cursor in windowed mode, iconification handling etc).
 <p>To compile GLFW for Mac OS X, you will need to have installed the BSD
 subsystem and the Developer Tools, which can be found on your Mac OS X
 CD:s. When they are installed, simply open Terminal and go to the
-<b>lib/macosx</b> directory. From there, you can build the library by running
-make with the appropriate makefile, i.e. <b>make -f Makefile.macosx.gcc</b>.
+root GLFW directory. From there, you can build the library and all the
+examples by running make, i.e. <b>make macosx-gcc</b>.
 
 
 <p><br><h3>2.9 Note for DOS users</h3>
@@ -282,11 +282,11 @@ gl.h, glu.h etc. are located).
 
 <p><br><h3>3.4 Mac OS X</h3>
 
-<p>After compiling GLFW, a file named <b>libglfw.a</b> should have
-appeared in the <b>lib/macosx</b> directory. This is the GLFW static
-library, which should be copied to an appropriate <b>lib</b> directory,
-preferrably <b>/usr/local/lib</b>. Note that you must run <b>ranlib</b>
-on the library after it has been copied, in order for it to be usable, i.e.
+<p>After compiling GLFW, a file named <b>libglfw.a</b> should appear in
+the <b>lib/macosx</b> directory. This is the GLFW static library, which
+should be copied to an appropriate <b>lib</b> directory, preferrably
+<b>/usr/local/lib</b>. Note that you must run <b>ranlib</b> on the library
+after it has been copied, in order for it to be usable, i.e.
 
 <p>&nbsp;&nbsp;<b>sudo mkdir -p /usr/local/lib</b>
 <p>&nbsp;&nbsp;<b>sudo cp libglfw.a /usr/local/lib</b>
@@ -523,6 +523,13 @@ version of GLFW.
  <li>[X11] Bugfix: Runtime check of XF86VidMode support for the active
      display</li>
  <li>[X11] Bugfix: Some mouse button events were reported incorrectly</li>
+ <li>[MacOSX] Added support for the input char callback.</li>
+ <li>[MacOSX] Added video mode validation and duplicate elimination.</li>
+ <li>[MacOSX] Switched to a new MakeBundle.sh script.</li>
+ <li>[MacOSX] Added emulation of the window paint callback.</li>
+ <li>[MacOSX] Bugfix: The window and its associated resources are now
+     properly released.</li>
+ <li>[MacOSX] Bugfix: Removed support for more than eight mouse buttons.</li>
 </ul>
 
 <p><h3>v2.4.2</h3>
