Some more text, but far from finished.

--- a/support/d/readme.html
+++ b/support/d/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.1 2004-03-04 21:30:19 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.2 2004-08-31 19:49:16 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file for the D programming language</title>
@@ -46,7 +46,16 @@ should read the GLFW documentation.
 <a name="sec2">
 <p><h2>2. Using GLFW from D</h2>
 
-<p>TODO
+<p>First you have to install GLFW under your Digital Mars environment.
+
+<p><ol>
+ <li>Build the OpenGL, GLU and GLFW import libraries in the support\d\lib
+     directory by running 'make'.</li>
+ <li>Copy the resulting .lib files to your dm\lib folder.</li>
+ <li>...</li>
+</ol>
+
+<p>More TODO...
 
 
 <!----------------------------------------------------------------------->
