Added version history note about detection of Intel mobile CPUs

--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.36 2004-08-31 19:22:28 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.37 2004-12-31 22:03:23 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -530,6 +530,8 @@ version of GLFW.
  <li>[MacOSX] Bugfix: The window and its associated resources are now
      properly released.</li>
  <li>[MacOSX] Bugfix: Removed support for more than eight mouse buttons.</li>
+ <li>[x86 CPUs] Improved Intel mobile CPU detection (e.g. disables RDTSC
+     timing on Centrino systems)</li>
 </ul>
 
 <p><h3>v2.4.2</h3>
